--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-actions": "^0.9.1"
   }
 }
