--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.7.2",
+    "cross-env": "^1.0.7",
+    "enzyme": "^2.1.0",
+    "expect": "^1.15.2",
+    "express": "^4.13.4",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.12.14"
   },
   "scripts": {
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register"
   },
   "dependencies": {
     "react": "^0.14.7",
