--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack": "^1.12.14"
   },
   "scripts": {
-    "webpack": "NODE_ENV=test webpack",
+    "webpack": "NODE_ENV=test webpack --progress --color",
     "eslint": "eslint --config ./.eslintrc ./js/*",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register"
   },
@@ -27,6 +27,8 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
-    "redux-actions": "^0.9.1"
+    "redux-actions": "^0.9.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   }
 }
