--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expect": "^1.15.2",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
+    "redux-mock-store": "^1.0.2",
     "webpack": "^1.12.14"
   },
   "scripts": {
