--- a/.eslintrc
+++ b/.eslintrc
@@ -18,5 +18,9 @@
     "react/jsx-uses-react": 1,
     "react/jsx-no-undef": 2,
     "react/wrap-multilines": 2
+  },
+  "globals": {
+    "describe": false,
+    "it": false
   }
 }
