--- a/.eslintrc
+++ b/.eslintrc
@@ -13,11 +13,11 @@
   ],
   "rules": {
     "semi": 0,
-    "no-var": 0,
+    "no-var": 1,
     "no-unused-vars": 0,
     "react/jsx-uses-react": 1,
     "react/jsx-no-undef": 2,
-    "react/wrap-multilines": 2
+    "react/wrap-multilines": 2,
   },
   "globals": {
     "describe": false,
